[gd_scene load_steps=3 format=3]

[ext_resource type="Script" uid="uid://byde0n6xqbq3f" path="res://horror_ui_ui_scenes/ui/WelcomeScreen.gd" id="1"]

[node name="WelcomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.4
text = "YOUR GAME TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyKeyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.65
text = "Press any key"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
wait_time = 3.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
